force-app/main/default/objects/Visa_Thought__c/Visa_Thought__c.object-meta.xml
<CustomObject>
    <description>info from Web form</description>
    <label>Visa Thought</label>
    <nameField>
        <displayFormat>V-{000000}</displayFormat>
        <label>Numb</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visa Thoughts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>