force-app/main/default/objects/Visa_Thought__c/fields/Born2Invest_Offers__c.field-meta.xml
<CustomField>
    <fullName>Born2Invest_Offers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Born2Invest Offers</label>
    <type>Checkbox</type>
</CustomField>