force-app/main/default/objects/Visa_Thought__c/fields/degree_qualification__c.field-meta.xml
<CustomField>
    <fullName>degree_qualification__c</fullName>
    <label>Do you have a degree/qualification?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Doctorate</fullName>
            </value>
            <value>
                <fullName>Masters</fullName>
            </value>
            <value>
                <fullName>Bachelors</fullName>
            </value>
            <value>
                <fullName>High school</fullName>
            </value>
            <value>
                <fullName>Technical qualifications</fullName>
            </value>
            <value>
                <fullName>No qualifications</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>