force-app/main/default/objects/Visa_Thought__c/fields/How_much_can_you_invest__c.field-meta.xml
<CustomField>
    <fullName>How_much_can_you_invest__c</fullName>
    <label>How much can you invest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nothing</fullName>
            </value>
            <value>
                <fullName>5,000 - 20,000</fullName>
            </value>
            <value>
                <fullName>21,000 - 50,000</fullName>
            </value>
            <value>
                <fullName>51,000 - 100,000</fullName>
            </value>
            <value>
                <fullName>100,000 - 500,000</fullName>
            </value>
            <value>
                <fullName>500,000 +</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>