force-app/main/default/objects/Visa_Thought__c/fields/Money_available__c.field-meta.xml
<CustomField>
    <fullName>Money_available__c</fullName>
    <label>Money available within the next 30 days</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>