force-app/main/default/objects/Visa_Thought__c/fields/Source_URL__c.field-meta.xml
<CustomField>
    <fullName>Source_URL__c</fullName>
    <label>Source URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>