force-app/main/default/objects/Visa_Thought__c/fields/When_would_you_like_to_move__c.field-meta.xml
<CustomField>
    <fullName>When_would_you_like_to_move__c</fullName>
    <label>When would you like to move?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-3 months</fullName>
            </value>
            <value>
                <fullName>4-6 months</fullName>
            </value>
            <value>
                <fullName>6+ months</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>