force-app/main/default/objects/Visa_Thought__c/fields/Who_is_coming_with_you__c.field-meta.xml
<CustomField>
    <fullName>Who_is_coming_with_you__c</fullName>
    <label>Who is coming with you?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Parents</fullName>
            </value>
            <value>
                <fullName>Children</fullName>
            </value>
            <value>
                <fullName>Grandparents</fullName>
            </value>
            <value>
                <fullName>Other dependants</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>