force-app/main/default/objects/Visa_Thought__c/fields/Why_do_you_want_to_move__c.field-meta.xml
<CustomField>
    <fullName>Why_do_you_want_to_move__c</fullName>
    <label>Why do you want to move?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tax reasons</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Business reasons</fullName>
            </value>
            <value>
                <fullName>To find a job</fullName>
            </value>
            <value>
                <fullName>Asylum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>